fix: footer wrap 추가

--- a/src/layouts/Footer/style.css
+++ b/src/layouts/Footer/style.css
@@ -5,6 +5,11 @@
   justify-content: space-between;
   align-items: center;
   margin: 0 24px;
+  flex-wrap: wrap;
+}
+
+.global-footer p {
+  margin: 8px 0;
 }
 
 .global-footer .sponsor a {
